<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.yorku.eecs.cse13261.eecs4443project.HelpActivity" >

    <ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:gravity="center_horizontal"
	    android:orientation="horizontal"
	    android:paddingBottom="50dp" >
	
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:padding="20dp"
	        android:orientation="vertical" >
	        
            <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:paddingBottom="10dp"
	            android:text="@string/help_text_1"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:paddingBottom="10dp"
	            android:text="@string/help_text_2"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:paddingBottom="10dp"
	            android:text="@string/help_text_3"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:paddingBottom="10dp"
	            android:text="@string/help_text_4"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:paddingBottom="10dp"
	            android:text="@string/help_text_5"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:paddingBottom="10dp"
	            android:text="@string/help_text_6"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:paddingBottom="10dp"
	            android:text="@string/author_email"
	            android:gravity="center_horizontal"
	            android:autoLink="email"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
            
	    </LinearLayout>
        
	</ScrollView>

	<Button
	    style="?android:attr/buttonStyle"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="bottom"
	    android:onClick="clickExit"
	    android:text="@string/help_btn_exit"
	    android:textAppearance="?android:attr/textAppearanceMedium" >

	</Button>
	
</FrameLayout>
